---------------------------------------------------------------------------------------------------
Version: 4.1.22
Date: ????
  Changes:
    - Removed the setting to enable/disable infinite omnite. This can be done in the map generator
---------------------------------------------------------------------------------------------------
Version: 4.1.21
Date: 2021.12.02
  Changes:
    - Partial support for indev Py AlienLife
  Bugfixes:
    - Fixed "floating" pipe connections on phlog/tractor
---------------------------------------------------------------------------------------------------
Version: 4.1.20
Date: 2021.09.01
  Bugfixes:
    - Force bob`s infinite ore setting to false when hiding it
    - Fixed that all omnicium alloy recipes were enabled by default without angels refining
    - Fixed that advanced omnicium smelting 1 had a wrong localised name set
---------------------------------------------------------------------------------------------------
Version: 4.1.19
Date: 2021.08.16
  Bugfixes:
    - Fixed that extraction tiers with a single ore messed up ratios and crafting categories of
      the extractions of the previous tier
    - Fixed that the burner omnitractor had a omniphlog icon
---------------------------------------------------------------------------------------------------
Version: 4.1.18
Date: 2021.08.14
  Features:
    - Added new omnite item icons & variants
    - Added new omnite resource graphics
  Changes:
    - Changed burner omnitractor and burner omniphlog crafting time to 5 s (10s / 1s before)
    - Doubled crushed omnite, pulverized omnite and pulverized stone crafting times
    - Increases Stacksize of all entities to 50
  Bugfixes:
    - Fixed that the omnifurnace had a wrong working sound set
    - Fixed omnite bricks having the wrong map color
    - Exclude non-resources from autoplace removal
---------------------------------------------------------------------------------------------------
Version: 4.1.17
Date: 2021.07.22