@@ -117,18 +117,19 @@ omnic-waste=Omnic Waste
 omnic-water=Omnic Water
 
 [mod-setting-name]
-omnimatter-infinite-omnic-acid=Infinite patches requires omnic acid.
+omnimatter-infinite-omnic-acid=Infinite patches requires omnic acid
 omnimatter-max-tier=Omnitractor Max Tier
-omnimatter-pure-lvl-per-tier=Number of pure extraction techs between each tier.
-omnimatter-impure-lvls=Number of impure techs.
-omnimatter-fluid-lvl-per-tier=Number of fluid levels per tier.
-omnimatter-fluid-lvl=Number of fluid levels.
-omnimatter-pure-tech-tier-cost-increase=Pure tech cost increase by tier.
-omnimatter-pure-tech-level-cost-increase=Constant for tech increase by level.
+omnimatter-pure-lvl-per-tier=Number of pure extraction techs between each tier
+omnimatter-impure-lvls=Number of impure techs
+omnimatter-fluid-lvl-per-tier=Number of fluid levels per tier
+omnimatter-fluid-lvl=Number of fluid levels
+omnimatter-pure-tech-tier-cost-increase=Pure tech cost increase by tier
+omnimatter-pure-tech-level-cost-increase=Constant for tech increase by level
 omnimatter-beginner-multiplier=Beginner help
-omnimatter-linear-science-packs=Science pack cost scales linearly.
-omnimatter-rocket-locked=Rocket silo locked behind extraction.
-omnimatter-science-pack-constant=Science pack constant.
+omnimatter-linear-science-packs=Science pack cost scales linearly
+omnimatter-rocket-locked=Rocket silo locked behind extraction
+omnimatter-science-pack-constant=Science pack constant
+omnimatter-mining-fluids=Adopt required mining fluids for extractions
 
 [mod-setting-description]
 omnimatter-infinite-omnic-acid=If enabled, infinite omnite will require omnic acid to be mined
@@ -143,3 +144,4 @@ omnimatter-beginner-multiplier=Early Tech Cost Multiplier: Multiply all techs pr
 omnimatter-linear-science-packs=True: science pack cost scales linearly. False: science pack cost scales exponentially.
 omnimatter-rocket-locked=The rocket silo will be locked behind all extraction technologies.
 omnimatter-science-pack-constant=Determines the science pack costs of sciences as it goes up, lower bound is 0 for linear and 1 for non-linear.
+omnimatter-mining-fluids=Extraction recipes of ores that normally require a mining fluid require that fluid aswell.
