@@ -112,4 +112,11 @@ data:extend({
     per_user = false,
     order = "am"
   },
+  {
+    type = "bool-setting",
+    name = "omnimatter-mining-fluids",
+    setting_type = "startup",
+    default_value = true,
+    order = "an"
+  },
 })
